# kr-company-registry

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: refresh.yml  validate.yml
data/raw/: .gitignore
docs/: code-walkthrough.md  data-quality-findings.md  what-is-this-crosswalk.md
src/: _paths.py  build_crosswalk.py  validate.py
src/kr_company_registry/: __init__.py  _paths.py  build_crosswalk.py  constants.py  validate.py
tests/: conftest.py  test_crosswalk.py
